testdata/bad/blob_4.ion
// Unnecessary pad character
{{ SSBhbSBhIGJsb2I== }} 
